SF-2 Program Arguments - Added a new module sysgine-framework-bom to consumer projects and keep all updated and synchronized. - Updated project settings correctly to avoid dependencies and plugins duplicated.